--- a/views/html/index.html
+++ b/views/html/index.html
@@ -81,8 +81,8 @@
                         <figure>
                             <img src="../../content/images/eng/iintro-image.png" alt="한-아랍 스타트업 아이디어 공모전 소개 문구 이미지">
                         </figure>
-                        <a href="http://www.korea-arab.org/" target="_blank" title="한국-아랍 소사이어티 홈페이지로 이동하기 (새 창 이동)" class="cmn-btn__homepage"><span class="txt-hidden">한국-아랍 소사이어티 홈페이지 이동 버튼</span></a>
-                        <a href="https://youtu.be/jRheKPQDRwA" target="_blank" title="아랍 관련 비즈니스 세미나 시청하기 (새 창 이동)" class="cmn-btn__download"><span class="txt-hidden">아랍 관련 비즈니스 세미나 시청하기 버튼</span></a>
+                        <a href="http://eng.korea-arab.org/" target="_blank" title="한국-아랍 소사이어티 영문 홈페이지로 이동하기 (새 창 이동)" class="cmn-btn__homepage"><span class="txt-hidden">한국-아랍 소사이어티 홈페이지 이동 버튼</span></a> <!-- 0705 zoe 수정 -->
+                        <!-- <a href="https://youtu.be/jRheKPQDRwA" target="_blank" title="아랍 관련 비즈니스 세미나 시청하기 (새 창 이동)" class="cmn-btn__download"><span class="txt-hidden">아랍 관련 비즈니스 세미나 시청하기 버튼</span></a> 0705 zoe 삭제 -->
                     </div>
                 </div> <!-- //grid -->
             </div> <!-- //intro area -->
@@ -111,7 +111,7 @@
                                         <strong class="faq-list-tit"><span class="idx">Q</span>지원 자격에 나이 제한이 있나요?</strong>
                                     </button>
                                     <div class="faq-list-txt" style="display: block;">
-                                        <p>본 공모전은 청년을 대상으로 하고 있으며, 만 34세까지 지원 가능합니다.</p> <!-- 0702 2차 zoe 수정 -->
+                                        <p>본 공모전은 청년을 대상으로 하고 있으며, 만 34세까지 지원 가능합니다.</p>
                                     </div>
                                 </li>
                                 <li>
@@ -127,15 +127,15 @@
                                         <strong class="faq-list-tit"><span class="idx">Q</span>직장인도 참여 가능할까요?</strong>
                                     </button>
                                     <div class="faq-list-txt">
-                                        <p>직장인도 참여 가능합니다.<br>다만 멘토링, 최종 프레젠테이션, 시상식 등 공모전 프로그램 참여에 차질이 없어야 합니다.</p> <!-- 0702 2차 zoe 수정 -->
+                                        <p>직장인도 참여 가능합니다.<br>다만 컨설팅, 최종 프레젠테이션, 시상식 등 공모전 프로그램 참여에 차질이 없어야 합니다.</p>
                                     </div>
                                 </li>
                                 <li>
                                     <button class="faq-list-tit-box active">
-                                        <strong class="faq-list-tit"><span class="idx">Q</span>팀원 중 외국인이 있는 경우, 참가 조건이 있을까요?</strong><!-- 0702 2차 zoe 수정 -->
+                                        <strong class="faq-list-tit"><span class="idx">Q</span>외국인 팀원의 별도 참가 자격이 있을까요?</strong>
                                     </button>
                                     <div class="faq-list-txt">
-                                        <p>한국에 거주하는 아랍 청년이라면 나이(34세까지), 국적, 성별에 상관없이 누구나 참여 가능합니다.<br>외국인 지원 시, 외국인 등록증 및 만료이전 비자를 필수로 제출해주시기 바랍니다.</p><!-- 0702 2차 zoe 수정 -->
+                                        <p>한국에 거주하는 아랍 청년이라면 나이, 국적, 성별에 상관없이 누구나 참여 가능합니다.<br>외국인 지원 시, 외국인 등록증 및 만료이전 비자를 필수로 제출해주시기 바랍니다.</p>
                                     </div>
                                 </li>
                                 <li>
@@ -148,7 +148,7 @@
                                 </li>
                                 <li>
                                     <button class="faq-list-tit-box active">
-                                        <strong class="faq-list-tit"><span class="idx">Q</span>창업 아이템의 지적재산권은 한국-아랍 소사이어티에 귀속되나요?</strong> <!-- 0702 2차 zoe 수정 -->
+                                        <strong class="faq-list-tit"><span class="idx">Q</span>창업 아이템의 지적재산권은 한국-아랍 소사이어티에 귀속되나요?</strong>
                                     </button>
                                     <div class="faq-list-txt">
                                         <p>공모전에 제출한 창업 아이디어의 지적재산권 등 소유권은 재단이 아닌 참가자에게 귀속됩니다.</p>
@@ -159,7 +159,7 @@
                                         <strong class="faq-list-tit"><span class="idx">Q</span>함께 활동 중인 스타트업의 프로젝트 (타 공모전에서 수상한 적 없는 아이디어)도 지원 가능할까요?</strong>
                                     </button>
                                     <div class="faq-list-txt">
-                                        <p>가능합니다. 본인의 아이디어가 반영되어 있어야 하며, 스타트업 대표가 아닌 경우 (개인이 회사의 아이디어로 지원하는 경우) 지적재산권, 특허 등의 문제 소지가 없는지 반드시 확인 하셔야 합니다.</p> <!-- 0702 2차 zoe 수정 -->
+                                        <p>가능합니다. 본인의 아이디어가 반영되어 있어야 하며, 스타트업 대표가 아닌 경우 (개인이 회사의 아이디어로 지원하는 경우) 지적재산권, 특허 등의 문제 소지가 없는지 반드시 확인 하셔야 합니다.</p>
                                     </div>
                                 </li>
                                 <li>
@@ -167,7 +167,7 @@
                                         <strong class="faq-list-tit"><span class="idx">Q</span>가지고 있는 아이템이 아직 구체화되지 않은 아이디어 단계인데 본 공모전에 지원 할 수 있을까요?</strong>
                                     </button>
                                     <div class="faq-list-txt">
-                                        <p>아이템이 구체화되지 않은 상태라도 1P 브리프 제안서를 작성하는 ‘아이디어 전형’에 지원 가능하며, 서류 합격 시 멘토링 및 프레젠테이션 과정을 통해 아이템을 디벨롭 할 수 있는 기회가 될 수 있습니다.</p><!-- 0702 2차 zoe 수정 -->
+                                        <p>아이템이 구체화되지 않은 상태라도 1P 브리프 제안서를 작성하는 ‘아이디어 전형’에 지원 가능하며, 서류 합격 시 컨설팅 및 프레젠테이션 과정을 통해 아이템을 디벨롭 할 수 있는 기회가 될 수 있습니다.</p>
                                     </div>
                                 </li>
                                 <li>
@@ -247,7 +247,7 @@
                     <div class="lang-cont__eng">
                         <ul class="tab-menu-list flex-box">
                             <li>
-                                <a href="javascript:void(0);" class="tab-menu active" onclick="showTabCont('about');">How to apply</a><!-- 0702 2차 zoe 수정 -->
+                                <a href="javascript:void(0);" class="tab-menu active" onclick="showTabCont('about');">Summary</a>
                             </li>
                             <li>
                                 <a href="javascript:void(0);" class="tab-menu" onclick="showTabCont('faq');">FAQ</a>
@@ -275,31 +275,31 @@
                                         <strong class="faq-list-tit"><span class="idx">Q</span>When applying for a team, how many team members can be formed?</strong>
                                     </button>
                                     <div class="faq-list-txt">
-                                        <p>There is no limit on the number of team members. When filling out the application form, please write the role of each team member in the "role" field. If your team receive an award , please be informed that only up to 2 people per team can be benifited of certain awards.</p> <!-- 0702 2차 zoe 수정 -->
+                                        <p>There is no limit on the number of team members. When filling out the application form, please write the role of each team member in the "role" field. If your team receive an award , please be informed that only up to 2 people per team can be benifited of certain awards.</p>
                                     </div>
                                 </li>
                                 <li>
                                     <button class="faq-list-tit-box active">
-                                        <strong class="faq-list-tit"><span class="idx">Q</span>Can currently working indiviuals apply?</strong> <!-- 0702 2차 zoe 수정 -->
+                                        <strong class="faq-list-tit"><span class="idx">Q</span>Can currently working indiviuals apply?</strong>
                                     </button>
                                     <div class="faq-list-txt">
-                                        <p>Currently employed individuals can also apply. However, there must be no disruption to the participation in the competition program, such as mentoring, final presentation, and awards ceremony.</p> <!-- 0702 2차 zoe 수정 -->
+                                        <p>Currently employed individuals can also apply. However, there must be no disruption to the participation in the competition program, such as mentoring, final presentation, and awards ceremony.</p>
                                     </div>
                                 </li>
                                 <li>
                                     <button class="faq-list-tit-box active">
-                                        <strong class="faq-list-tit"><span class="idx">Q</span>If a team member is a foreigner, what is his/her eligibility?</strong> <!-- 0702 2차 zoe 수정 -->
+                                        <strong class="faq-list-tit"><span class="idx">Q</span>If a team member is a foreigner, what is his/her eligibility?</strong>
                                     </button>
                                     <div class="faq-list-txt">
-                                        <p>Any young Arabs living in Korea can apply regardless of age(up to 34), nationality, or gender.<br>When applying, please submit documents proving the person's legal residency in Korea. (alien registration card and visa must be submitted before expiration)</p> <!-- 0702 2차 zoe 수정 -->
+                                        <p>Any young Arabs living in Korea can apply regardless of age(up to 34), nationality, or gender.<br>When applying, please submit documents proving the person's legal residency in Korea. (alien registration card and visa must be submitted before expiration)</p>
                                     </div>
                                 </li>
                                 <li>
                                     <button class="faq-list-tit-box active">
-                                        <strong class="faq-list-tit"><span class="idx">Q</span>Are there any priorities based on categories or countries?</strong> <!-- 0702 2차 zoe 수정 -->
+                                        <strong class="faq-list-tit"><span class="idx">Q</span>Are there any priorities based on categories or countries?</strong>
                                     </button>
                                     <div class="faq-list-txt">
-                                        <p>There is no priority for countries and categories. If you have a creative idea related to the Arab region, you can apply regardless of country or category.</p> <!-- 0702 2차 zoe 수정 -->
+                                        <p>There is no priority for countries and categories. If you have a creative idea related to the Arab region, you can apply regardless of country or category.</p>
                                     </div>
                                 </li>
                                 <li>
@@ -307,7 +307,7 @@
                                         <strong class="faq-list-tit"><span class="idx">Q</span>Does the intellectual property right of start-up items belong to the Korea-Arab Society?</strong>
                                     </button>
                                     <div class="faq-list-txt">
-                                        <p>Ownership of intellectual property rights, etc. of startup ideas submitted to the competition belong to the participant, not to the Society.</p> <!-- 0702 2차 zoe 수정 -->
+                                        <p>Ownership of intellectual property rights, etc. of startup ideas submitted to the competition belong to the participant, not to the Society.</p>
                                     </div>
                                 </li>
                                 <li>
@@ -315,31 +315,31 @@
                                         <strong class="faq-list-tit"><span class="idx">Q</span>Can I apply for projects of startups I am working with (ideas that have not been awarded in other competitions)?</strong>
                                     </button>
                                     <div class="faq-list-txt">
-                                        <p>Yes, you may apply. Your ideas must be reflected, and if you are not a startup representative (and an individual applying with a company's ideas), you must check whether there are any problems with intellectual property rights or patents.</p> <!-- 0702 2차 zoe 수정 -->
+                                        <p>Yes, you may apply. Your ideas must be reflected, and if you are not a startup representative (and an individual applying with a company's ideas), you must check whether there are any problems with intellectual property rights or patents.</p>
                                     </div>
                                 </li>
                                 <li>
                                     <button class="faq-list-tit-box active">
-                                        <strong class="faq-list-tit"><span class="idx">Q</span>If the idea I have is at a stage that has not been fully materialized yet, can I apply for this competition?</strong> <!-- 0702 2차 zoe 수정 -->
+                                        <strong class="faq-list-tit"><span class="idx">Q</span>If the idea I have is at a stage that has not been fully materialized yet, can I apply for this competition?</strong>
                                     </button>
                                     <div class="faq-list-txt">
-                                        <p>Even if the idea has not been materialized, you can apply for the ‘idea division’ by submitting a brief one-page proposal.<br>Upon passing the screening, there may be an opportunity to develop the idea through mentoring and presentation processes.</p> <!-- 0702 2차 zoe 수정 -->
+                                        <p>Even if the idea has not been materialized, you can apply for the ‘idea division’ by submitting a brief one-page proposal.<br>Upon passing the screening, there may be an opportunity to develop the idea through mentoring and presentation processes.</p>
                                     </div>
                                 </li>
                                 <li>
                                     <button class="faq-list-tit-box active">
-                                        <strong class="faq-list-tit"><span class="idx">Q</span>Who will do the on-line mentoring?</strong> <!-- 0702 2차 zoe 수정 -->
+                                        <strong class="faq-list-tit"><span class="idx">Q</span>Who will do the on-line mentoring?</strong>
                                     </button>
                                     <div class="faq-list-txt">
-                                        <p>Experts from relevant organizations specializing in startup support and Arab market will participate. We will inform you in more details later in the process.</p> <!-- 0702 2차 zoe 수정 -->
+                                        <p>Experts from relevant organizations specializing in startup support and Arab market will participate. We will inform you in more details later in the process.</p>
                                     </div>
                                 </li>
                                 <li>
                                     <button class="faq-list-tit-box active">
-                                        <strong class="faq-list-tit"><span class="idx">Q</span>What is the exact benefit of opportunity to visit the Dubai Expo?</strong> <!-- 0702 2차 zoe 수정 -->
+                                        <strong class="faq-list-tit"><span class="idx">Q</span>What is the exact benefit of opportunity to visit the Dubai Expo?</strong>
                                     </button>
                                     <div class="faq-list-txt">
-                                        <p>This is a benefit to be given to the 1st to 3rd place winning teams in the Startup division, and the 1st place team in the idea division. If the selected teams(up to 2 people per team) wish to visit Dubai, the benefit will be provided after thorough preparations for the visit have been made and the relevant procedures explained at a later time.<br>(*Dubai Expo 2021 to be held from October 2021 to March 2022)</p> <!-- 0702 2차 zoe 수정 -->
+                                        <p>This is a benefit to be given to the 1st to 3rd place winning teams in the Startup division, and the 1st place team in the idea division. If the selected teams(up to 2 people per team) wish to visit Dubai, the benefit will be provided after thorough preparations for the visit have been made and the relevant procedures explained at a later time.<br>(*Dubai Expo 2021 to be held from October 2021 to March 2022)</p>
                                     </div>
                                 </li> 
                             </ul>
@@ -350,7 +350,7 @@
                                     <div class="form-wrap">
                                         <div class="form-field">
                                             <div class="form-row pb30 txt-cnt">
-                                                <p class="form-tip pl0">Please leave an inquiry regarding the competition.<br>It will be replied via email.</p> <!-- 0702 2차 zoe 수정 -->
+                                                <p class="form-tip pl0">Please leave an inquiry regarding the competition.<br>It will be replied via email.</p>
                                             </div>
                                             <div class="form-row">
                                                 <div class="form-el-wrap__col flex-box">
@@ -387,7 +387,7 @@
                                                         <label class="form-chk-label" for="qnaTermCheck">I agree to the collection and use of personal information.</label>
                                                     </div>
                                                     <div class="form-term-box mt30">
-                                                        <p>Operation Secretariat for the Korea-Arab Startup Idea Pitch Competition (hereinafter referred to as the "Operation Secretariat") collects the following personal information from users when using the service.<br><br>2. Period of retention and use of personal information<br>In principle, the member's personal information will be destroyed without delay after 3 months after answering the inquiry.<br><br>※ You may refuse to consent to the collection and use of essential items, but since this is information that is essential to providing services, you cannot use the Q&A if you refuse to consent.</p> <!-- 0702 2차 zoe 수정 -->
+                                                        <p>Operation Secretariat for the Korea-Arab Startup Idea Pitch Competition (hereinafter referred to as the "Operation Secretariat") collects the following personal information from users when using the service.<br><br>2. Period of retention and use of personal information<br>In principle, the member's personal information will be destroyed without delay after 3 months after answering the inquiry.<br><br>※ You may refuse to consent to the collection and use of essential items, but since this is information that is essential to providing services, you cannot use the Q&A if you refuse to consent.</p>
                                                     </div>
                                                 </div>
                                             </div>  
