--- a/views/html/privacy.html
+++ b/views/html/privacy.html
@@ -62,7 +62,7 @@
                     <img src="../../content/images/kor/sub-visual-image.png" alt="한-아랍 스타트업 아이디어 공모전 | 공모기간 : 2021.7.5(Mon) ~ 2021.8.31(Tue) 16:00" class="lang-cont__kor">
                     <img src="../../content/images/eng/sub-visual-image.png" alt="Korea-Arab
                     Startup Pitch Competition : Jul 5(Mon), 2021 ~ Aug 31(Tue), 2021" class="lang-cont__eng">
-                </figure> <!-- 0702 zoe 수정 -->
+                </figure>
                 <a href="javascript:void(0);" class="cmn-btn__lang-kor" onclick="showLangCont('kor');"><span class="txt-hidden">국문 페이지 보기 버튼</span></a>
                 <a href="javascript:void(0);" class="cmn-btn__lang-eng" onclick="showLangCont('eng');"><span class="txt-hidden">영문 페이지 보기 버튼</span></a>
             </div>
@@ -145,6 +145,86 @@
                         </dd>
                     </dl>
                 </div>
+                <div class="lang-cont__eng">
+                    <div class="policy-wrap">
+                        <p class="policy-txt fs20">The Korea-Arab Startup Idea Pitch Competition (hereinafter referred to as the 'Operation Secretariat') values ​​users' personal information, and will endeavor to comply with the 「Act on Promotion of Information and Communications Network Utilization and Information Protection, Etc.」 and 「Personal Information Protection Act」.<br><br>Through the personal information processing policy, the operation secretariat informs you of the purpose and method of using the personal information provided by the user and what measures are being taken to protect personal information.</p>
+                    </div>
+                    <dl class="policy-wrap">
+                        <dt class="policy-hd-tit fs30">1. Purpose of collection and use of personal information / period / right to refuse collection</dt>
+                        <dd>
+                            <strong class="policy-sub-tit fs22">1) Collection method</strong>
+                            <p class="policy-txt fs20">Through application documents for Korea-Arab Startup Idea Pitch Competition</p>
+                            <strong class="policy-sub-tit fs22">2) Purpose for use of collected personal information</strong>
+                            <p class="policy-txt fs20">Application review, business operation and management</p>
+                            <strong class="policy-sub-tit fs22">3) Collected items</strong>
+                            <p class="policy-txt fs20">① required<br>· Individual applicants - name, date of birth, gender, nationality, contact information, address, affiliation, and position<br>· Team Applicants - Team member information (name, affiliation, contact information)<br><br>② optional : related award history</p>
+                            <strong class="policy-sub-tit fs22">4) Retention and use period</strong>
+                            <p class="policy-txt fs20">The above personal information will be destroyed immediately after the purpose of collection and use is completed. However, if it is necessary to retain personal information in accordance with the provisions of related laws, the operation secretariat may retain the personal information as follows in accordance with the provisions of the relevant laws and regulations.<br><br>- Records related to contract or subscription withdrawal: 5 years<br>- Records on payment and supply of goods: 5 years<br>- Records on consumer complaints or dispute resolution: 3 years<br>- Records on collection/processing and use of credit information: 3 years<br>- Records on display/advertisement: 6 months<br>- User's Internet log records / User's access location tracking data: 3 months<br>- Other communication confirmation data: 12 months</p>
+                            <strong class="policy-sub-tit fs22">5) Right to refuse collection</strong>
+                            <p class="policy-txt fs20">You may not agree to the collection and use of personal information. However, if the collection is rejected, the application and selection of applications may be restricted.</p>
+                        </dd>
+                    </dl>
+                    <dl class="policy-wrap">
+                        <dt class="policy-hd-tit fs30">2. The right to refuse to collect the purpose and period of use of the creative work</dt>
+                        <dd>
+                            <strong class="policy-sub-tit fs22">1) Collection method</strong>
+                            <p class="policy-txt fs20">Through application documents for Korea-Arab Startup Idea Pitch Competition</p>
+                            <strong class="policy-sub-tit fs22">2) Utilization items</strong>
+                            <p class="policy-txt fs20">Press release, SNS operation and promotion, advertising and publicity (campaign) material and marketing, etc.</p>
+                            <strong class="policy-sub-tit fs22">3) Retention and use period</strong>
+                            <p class="policy-txt fs20">The above project creations are continuously retained and used to prevent applying multiple times or to use marketing, etc., unless there are exceptional reasons.</p>
+                            <strong class="policy-sub-tit fs22">4) Right to refuse collection</strong>
+                            <p class="policy-txt fs20">You may not agree to use of the creative work. However, if the collection is rejected, the application and selection of applications may be restricted.</p>
+                        </dd>
+                    </dl>
+                    <dl class="policy-wrap">
+                        <dt class="policy-hd-tit fs30">3. Handling and consignment of personal information processing</dt>
+                        <dd>
+                            <strong class="policy-sub-tit fs22">1) Consignment</strong>
+                            <p class="policy-txt fs20">- Consignee: Website consigned service Operation Secretariat<br>- Consigned tasks: website support reception, website event operation and inquiry response, website content creation</p>
+                        </dd>
+                    </dl>
+                    <dl class="policy-wrap">
+                        <dt class="policy-hd-tit fs30">4. Destruction Procedures and Methods</dt>
+                        <dd>
+                            <p class="policy-txt fs20">After the usage purpose for personal information collected by ‘This Operation Secretariat’ is achieved, the pertaining information shall be immediately destroyed pursuant to the retention and usage periods. The destruction procedures and methods are as follows.</p>
+                            <strong class="policy-sub-tit fs22">1) Destruction procedure</strong>
+                            <p class="policy-txt fs20">Your personal information will be destroyed upon the achievement of the purpose of providing or collecting such information pursuant to the information protection clause based on internal policies and other relevant laws.</p>
+                            <strong class="policy-sub-tit fs22">2) Destruction method</strong>
+                            <p class="policy-txt fs20">Personal information existing in printed form shall be destroyed by paper shredding, incineration, or dissolution via a chemical process, and personal information saved as electronic files shall be deleted using a technical method disallowing any reproduction of the record.</p>
+                        </dd>
+                    </dl>
+                    <dl class="policy-wrap">
+                        <dt class="policy-hd-tit fs30">5. Provision of personal information to third parties</dt>
+                        <dd>
+                            <p class="policy-txt fs20">In principle, the operation secretariat does not provide users' personal information to external parties. However, exceptions are made in the following cases.<br><br>1) In accordance with the provisions of laws and regulations or when there is a request from the investigation agency in accordance with the procedures and methods stipulated in the laws for investigation purposes<br>2) In case it is necessary for the settlement of the fee according to the provision of paid services<br>3) When providing in a form that cannot identify a specific individual for statistical preparation, academic research, or market research<br>4) When users agree in advance<br><br>The companies listed above are subject to change in the future. If the Operation Secretariat changes or provides or shares users' personal information other than those listed, a procedure to obtain user consent will be provided.</p>
+                        </dd>
+                    </dl>
+                    <dl class="policy-wrap">
+                        <dt class="policy-hd-tit fs30">6. User’s right</dt>
+                        <dd>
+                            <p class="policy-txt fs20">The users or their legal representatives, as main agents of the information, may exercise the following rights regarding the collection, use and sharing of personal information by the Operation Secretariat.<br><br>1) exercise right to access to personal information<br>2) make corrections or deletion<br>3) make temporary suspension of treatment of personal information<br>4) request the withdrawal of their consent provided before<br><br>If, in order to exercise the above rights, you, as an user, use the menu of 'amendment of member information of webpage or contact the Operation Secretariat by sending a document or e-mails, or using telephone to the Operation Secretariat(or person in charge of management of personal information or a deputy), the Operation Secretariat will take measures without delay: Provided that the Operation Secretariat may reject the request of you only to the extent that there exists either proper cause as prescribed in the laws or equivalent cause.</p>
+                        </dd>
+                    </dl>
+                    <dl class="policy-wrap">
+                        <dt class="policy-hd-tit fs30">7. Installation and operation of an automated collection of personal information device and rejection related content</dt>
+                        <dd>
+                            <p class="policy-txt fs20">‘This Operation Secretariat’ does not use cookies that frequently save and find your personal information.An abnormal cookie may be created, however, if you log-in to this website and then open a different family website on a new page.  Cookies are very small text files to be sent to the browser of the users by the server used for operation of the websites of the Operation Secretariat and will be stored in hard-disks of the users' computer.<br><br>1) Reasons for using cookies and additional information : Prevention of excessive application, normal connection route verification and employment support services.<br><br>The users have an option for cookie installation. So, they may either allow all cookies by setting option in web browser, make each cookie checked whenever it is saved, or refuses all cookies to be saved: Provided that, if the user rejects the installation of cookies, it may be difficult for that user to use the parts of services provided by the Operation Secretariat.</p>
+                        </dd>
+                    </dl>
+                    <dl class="policy-wrap">
+                        <dt class="policy-hd-tit fs30">8. Personal information accountable personnel and manager</dt>
+                        <dd>
+                            <p class="policy-txt fs20">The Operation Secretariat makes every effort to provide prompt and good faith responses to inquiries on personal information protection. If you wish to contact the Service’s personal information manager, the Operation Secretariat will provide a prompt response in good faith to inquiries related to personal information when you contact the contact number or email indicated below.<br><br>① Personal information protection accountable personnel : Tae-eun Kim<br>② Personal information protection manager : Tae-eun Kim<br>③ Manager contact number :  02-551-7130<br>④ Manager email address : info@korea-arab.org</p>
+                        </dd>
+                    </dl>
+                    <dl class="policy-wrap">
+                        <dt class="policy-hd-tit fs30">9. Opinion Collection and Complaints Processing</dt>
+                        <dd>
+                            <p class="policy-txt fs20">When consulting on other personal information matters is required, inquiries may be made to the Korea Internet & Security Agency, the Personal Information Infringement Reporting Center, or the Korean National Police Agency Cyber Bureau.<br><br>① Personal Information Dispute Mediation Committee (https://www.kopico.go.kr)<br>② OPA Privacy (http://www.eprivacy.or.kr/index.do)<br>③ Cyber Investigation Division, Supreme Prosecutors' Office (https://www.spo.go.kr)<br>④ Korean National Police Agency Cyber Bureau (https://ecrm.cyber.go.kr )</p>
+                        </dd>
+                    </dl>
+                </div> <!-- 0705 zoe 추가 -->
             </div>
         </section>
         <!-- //sub END -->
